--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tylerjk02/wildwebsurfer#readme",
   "dependencies": {
+    "bootstrap-icons": "^1.10.3",
     "cheerio": "^1.0.0-rc.12"
   }
 }
